Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-3424

SSL error: SSL3_GET_RECORD:decryption failed or bad record mac

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 5.2.1, 5.3.0
    • Core, SSL
    • None

    Description

      Starting with 5.2.x we're seeing SSL_ERROR_SSL type errors in ssl_read_from_net, when calling OpenSSL's ERR_error_string_n we see the error is 1408F119:SSL routines:SSL3_GET_RECORD:decryption failed or bad record mac.

      Attachments

        1. ts-3424.diff
          0.6 kB
          Susan Hinrichs
        2. ts-3424-2.diff
          0.6 kB
          Susan Hinrichs
        3. ts-3424-3.diff
          6 kB
          Susan Hinrichs
        4. ts-3424-for-52.diff
          6 kB
          Susan Hinrichs
        5. ts-3424-for-52-2.diff
          7 kB
          Susan Hinrichs
        6. ts-3424-for-52-final.diff
          12 kB
          Susan Hinrichs
        7. undo-handshake-buffer.diff
          5 kB
          Susan Hinrichs
        8. undo-handshake-buffer-for-52.diff
          5 kB
          Susan Hinrichs

        Issue Links

          Activity

            People

              briang Brian Geffon
              briang Brian Geffon
              Votes:
              0 Vote for this issue
              Watchers:
              7 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: